# aRAMa

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  new-feature.yml
cmake/: WUPS.cmake
scripts/: client.py  common.py  server.py
src/: code_handler.cpp  config.cpp  config.h  main.cpp
src/arama/: arama.cpp  arama.h  config.cpp  config.h  logger.cpp  logger.h  menu.cpp  menu.h  notify.cpp  notify.h
src/core/: log_and_noti.cpp  log_and_noti.h
src/gecko/: codeHandler.cpp  codeHandler.h  gecko.cpp  gecko.h  version.h
src/gecko/comm_hand_backend/: comm_asm.cpp  comm_kernel.cpp
src/gecko/commands/: commands.h  debug.cpp  debug.h  fs.cpp  fs.h  info.cpp  info.h  memory.cpp  memory.h  os.cpp  os.h  state.cpp  state.h  system.cpp  system.h
src/kernel/: kernel_utils.cpp  kernel_utils.h
src/tcp/: server.cpp  server.h  socket.h
